--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -83,21 +83,18 @@
         </div>
 
         <div class="incard">
-            <div class="button-bar bars">
-                <a class="button button-outline button-royal" ng-click="tabvalue = 1;" ng-class="{'active': tabvalue == 1}">Online</a>
+            <div class="button-block bars">
+                <a class="button button-royal button-block" ng-click="searchproduct(product);">Online</a>
                 <!--                <a class="button button-outline button-royal" ng-click="offline()" ng-class="offlineclass">Offline</a>  -->
-                <a class="button button-outline button-royal" ng-click="tabvalue = 2;" ng-class="{'active': tabvalue == 2}">Offline</a>
+                <a class="button button-royal button-block" ng-click="memfunc(home);">Offline</a>
             </div>
+<!--
 
             <div class="header-card" ng-if="tabvalue == 1">Find Products</div>
             <div class="header-card" ng-if="tabvalue == 2">Find Shops</div>
-            <!--
-            <label class="item item-input area">
-                <span class="input-label">Area</span>
-                <input type="text" placeholder="Enter Your Area">
-            </label>
 -->
 
+<!--
             <div class="" ng-if="tabvalue == 1">
                 <label class="item item-input item-select area">
                     <div class="input-label">
@@ -105,7 +102,6 @@
                     </div>
                     <select ng-model="home.area">
                         <option value="">Mumbai</option>
-                        <!--                        <option ng-repeat="areas in user.area" value="{{areas.id}}">{{areas.name}}</option>-->
                     </select>
                 </label>
 
@@ -130,7 +126,7 @@
                 <div class="home-or">
                     <h6>- OR -</h6>
                 </div>
-                <!--            <div class="item item-input area">-->
+                            <div class="item item-input area">
                 <div class="row">
                     <div class="col">
                         <h5 class="member">Membership No.</h5>
@@ -140,10 +136,11 @@
                     </div>
                 </div>
                 <div class="padding-horizontal">
-                    <!--                    <button class="button button-block button-outline button-balanced" ng-click="memfunc(home);">Search</button>-->
                     <button class="button button-block button-outline button-balanced" ng-click="searchproduct(product);">Search</button>
                 </div>
             </div>
+-->
+<!--
             <div class="" ng-if="tabvalue == 2">
                 <label class="item item-input item-select area">
                     <div class="input-label">
@@ -179,7 +176,6 @@
                 <div class="home-or">
                     <h6>- OR -</h6>
                 </div>
-                <!--            <div class="item item-input area">-->
                 <div class="row">
                     <div class="col">
                         <h5 class="member">Membership No.</h5>
@@ -192,6 +188,7 @@
                     <button class="button button-block button-outline button-balanced" ng-click="memfunc(home);">Search</button>
                 </div>
             </div>
+-->
 
         </div>
     </ion-content>
