--- a/www/templates/product.html
+++ b/www/templates/product.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Products">
+<ion-view view-title="Online">
    
      <ion-nav-buttons side="right">
         <button class="button button-icon ion-arrow-swap small-icon arrows" ng-click="opensort();"></button>
