--- a/www/templates/search.html
+++ b/www/templates/search.html
@@ -1,6 +1,54 @@
-<ion-view view-title="Search Result" class="bar-royal">
+<ion-view view-title="Offline" class="bar-royal">
     <ion-content class="padding searcher">
+        <div class="incard search" ng-controller="HomeCtrl">
+            <div class="header-card">Offline Search</div>
+            <label class="item item-input item-select area">
+                <div class="input-label">
+                    City
+                </div>
+                <select ng-model="home.area">
+                    <option value="">Mumbai</option>
+                    <option ng-repeat="areas in user.area" value="{{areas.id}}">{{areas.name}}</option>
+                </select>
+            </label>
 
+            <label class="item item-input item-select area">
+                <div class="input-label">
+                    Area
+                </div>
+                <select ng-model="home.area">
+                    <option value="">All</option>
+                    <option ng-repeat="areas in user.area" value="{{areas.id}}">{{areas.name}}</option>
+                </select>
+            </label>
+
+
+            <label class="item item-input item-select area">
+                <div class="input-label">
+                    Categories
+                </div>
+                <select ng-model="home.category">
+                    <option value="">All</option>
+                    <option ng-repeat="categories in user.category" value="{{categories.id}}">{{categories.name}}</option>
+                </select>
+
+            </label>
+            <div class="home-or">
+                <h6>- OR -</h6>
+            </div>
+            <!--            <div class="item item-input area">-->
+            <div class="row">
+                <div class="col">
+                    <h5 class="member">Membership No.</h5>
+                </div>
+                <div class="col membershipno">
+                    <input type="text" id="normal-field" ng-model="home.membershipno">
+                </div>
+            </div>
+            <div class="padding-horizontal">
+                <button class="button button-block button-outline button-balanced" ng-click="memfunc(home);">Search</button>
+            </div>
+        </div>
         <div class="incard pad-btm" ng-if="recall.area.name || recall.category.name">
             <ion-list class="lesspadding">
                 <ion-item class="area" ng-if="recall.area.name">
@@ -25,7 +73,7 @@
                 </ion-item>
             </ion-list>
         </div>
-        <div class="incard">
+        <div class="incard search">
             <ion-list class="lesspadding" ng-if="shops.length>0">
                 <ion-item class="headed">
                     <div class="row">
@@ -35,7 +83,8 @@
                 </ion-item>
                 <ion-item href="#/app/shop/{{shop.id}}" ng-click="shopclick(shop);" ng-repeat="shop in shops ">
                     <div class="row">
-                        <div class="col prename"></i>{{shop.name}}</div>
+                        <div class="col prename">
+                            </i>{{shop.name}}</div>
                         <div class="col"><span class="balanced amount">{{shop.sellbalance}}</span>
                         </div>
                     </div>
