--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -84,7 +84,7 @@
 
         <div class="incard">
             <div class="button-block bars">
-                <a class="button button-royal button-block" ng-click="searchproduct(product);">Online</a>
+                <a href="#/app/products/0/0/0" class="button button-royal button-block">Online</a>
                 <!--                <a class="button button-outline button-royal" ng-click="offline()" ng-class="offlineclass">Offline</a>  -->
                 <a class="button button-royal button-block" ng-click="memfunc(home);">Offline</a>
             </div>
