--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -85,7 +85,7 @@
         <div class="incard">
             <div class="button-bar bars padding">
                 <!--                <a class="button button-royal button-block" ng-click="searchproduct(product);">Online</a>-->
-                <a class="button  button-royal" ng-click="searchproduct(product);" ng-class="offlineclass">Online</a>
+                <a class="button  button-royal" href="#/app/products/0/0/0">Online</a>
                 <a class="button  button-royal" ng-click="memfunc(home);">Offline</a>
                 <!--                <a class="button button-royal button-block" ng-click="memfunc(home);">Offline</a>-->
 
