--- a/www/css/style.css
+++ b/www/css/style.css
@@ -116,7 +116,7 @@ button.btn-smalls {
 }
 
 .search .item+.item {
-  border-top: 1px solid #ddd;
+    border-top: 1px solid #ddd;
 }
 /*
 .searcher .item+.item {
@@ -673,17 +673,18 @@ h5.member {
 }
 
 .holder2 {
-   width: 100%;
-  text-align: center;
-  background: rgba(0, 0, 0, 0.4);
-  color: white;
-  position: absolute;
-  bottom: 6px;
-/*
+    width: 100%;
+    text-align: center;
+    background: rgba(0, 0, 0, 0.4);
+    color: white;
+    position: absolute;
+    bottom: 6px;
+    /*
   left: 50%;
   transform: translateX(-50%);
 */
-  margin: auto;
+    
+    margin: auto;
 }
 
 .img-profile {
@@ -791,6 +792,10 @@ ion-item.item.item-thumbnail-left.trns-add {
     text-transform: capitalize;
 }
 
+.title.title-left.header-item {
+    left: 0px!important;
+}
+
 .centered {
     position: absolute;
     top: 50%;
@@ -803,6 +808,7 @@ ion-item.item.item-thumbnail-left.trns-add {
     -o-transform: translateY(-50%);
     transform: translateY(-50%);
 */
+    
     width: 100%;
     text-align: center;
 }
@@ -818,7 +824,7 @@ ion-item.item.item-thumbnail-left.trns-add {
 .input-div img {
     width: auto;
     height: 60px;
-    padding:0 5px;
+    padding: 0 5px;
 }
 
 .membershipno input {
@@ -992,7 +998,7 @@ p.addb-p {
 .centers {
     position: absolute;
     top: 50%;
-    background-color: #fff;
+/*    background-color: #fff;*/
     width: 100%;
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -1076,15 +1082,21 @@ button.button.button-icon.button-clear.ion-navicon.hide {
 .item-input textarea {
     width: 56%;
 }
-
 /* webkit solution */
-input.text-right ::-webkit-input-placeholder { text-align:right; }
+
+input.text-right::-webkit-input-placeholder {
+    text-align: right;
+}
 /* mozilla solution */
-input.text-right :-moz-placeholder { text-align:right; }
+
+input.text-right:-moz-placeholder {
+    text-align: right;
+}
 
 .row.productsCol .col img {
     height: 90px;
 }
-.col.input-div{
+
+.col.input-div {
     text-align: center;
 }
