--- a/www/templates/events.html
+++ b/www/templates/events.html
@@ -1,5 +1,6 @@
 <ion-view view-title="Events">
     <ion-content class="padding">
+<!--
         <div class="incard notification">
             <div class="header-cards">Business
                 <span style="float:right; font-size:14px;">15-12-2014</span>
@@ -20,5 +21,7 @@
             </div>
             <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
         </div>
+-->
     </ion-content>
+    <div class="centers">Coming Soon</div>
 </ion-view>
