--- a/www/templates/transaction.html
+++ b/www/templates/transaction.html
@@ -101,7 +101,7 @@
                             <p><b>Amount in Barter:</b> {{tr.payableamount}}</p>
                             <p><b>Amount in INR:</b> {{tr.amount}}</p>
                             <p><b>Date:</b> {{tr.date}}</p>
-                            <p ng-if='tr.approvalreason!="";'><b>Reason:</b> {{tr.approvalreason}}</p>
+                            <p ng-if='tr.approvalreason!="";'><b>Description:</b> {{tr.approvalreason}}</p>
 
                         </ion-item>
 
