--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -39,8 +39,11 @@
                 </ion-item>
                 <ion-item nav-clear menu-close href="#/app/events">
                     <span>Events</span>
-                </ion-item> 
-                   <ion-item nav-clear menu-close href="#/app/notification">
+                </ion-item>
+                <ion-item nav-clear menu-close href="#/app/suggestion">
+                    <span>Suggestion</span>
+                </ion-item>
+                <ion-item nav-clear menu-close href="#/app/notification">
                     <span>Notification</span>
                 </ion-item>
                 <ion-item nav-clear menu-close href="#/app/aboutus">
