--- a/www/templates/transaction.html
+++ b/www/templates/transaction.html
@@ -29,7 +29,7 @@
                             <span class="item-note">{{finalpurchase}}</span>
                             <h2 class="bold">Total</h2>
                         </ion-item>
-                         <ion-item class="item item-thumbnail-left" ng-repeat="tr in t.sales">
+                         <ion-item class="item item-thumbnail-left" ng-repeat="tr in t.sales" ng-click="openpurchase(tr);">
                             <div class="row">
                                 <div class="col-25">
                                     <div class="sell-img">
@@ -40,9 +40,11 @@
                                     <div class="sell-cont trans">
                                         <span class="item-note">-{{tr.amount}}</span>
                                         <h2>{{tr.shopname}}</h2>
-                                        <p>Date: {{tr.date}}</p>
+                                        <p>Date: {{tr.date | cmdate:'dd MMM yyyy'}}</p>
                                         <p>Time: {{tr.time}}</p>
                                         <p>Transaction Id: {{tr.id}}</p>
+                                        <p ng-if="tr.reason!='' && tr.reason.substr(0,9)!='ORDER ID:'">Description: {{tr.reason}}</p>
+                                        <p ng-if="tr.reason!='' && tr.reason.substr(0,9)=='ORDER ID:'">{{tr.reason}}</p>
                                     </div>
                                 </div>
                             </div>
@@ -63,7 +65,7 @@
                             <span class="item-note">{{finalsales}}</span>
                             <h2 class="bold">Total</h2>
                         </ion-item>
-                        <ion-item class="item item-thumbnail-left" ng-repeat="tr in t.purchased">
+                        <ion-item class="item item-thumbnail-left" ng-repeat="tr in t.purchased" ng-click="opensale(tr);">
                             <div class="row">
                                 <div class="col-25">
                                     <div class="sell-img">
@@ -74,9 +76,12 @@
                                     <div class="sell-cont trans">
                                         <span class="item-note">-{{tr.amount}}</span>
                                         <h2>{{tr.shopname}}</h2>
-                                        <p>Date: {{tr.date}}</p>
+                                        <p>Date: {{tr.date | cmdate:'dd MMM yyyy'}}</p>
                                         <p>Time: {{tr.time}}</p>
                                         <p>Transaction Id: {{tr.id}}</p>
+                                        <p ng-if="tr.reason!='' && tr.reason.substr(0,9)!='ORDER ID:'">Description: {{tr.reason}}</p>
+                                        <p ng-if="tr.reason!='' && tr.reason.substr(0,9)=='ORDER ID:'">{{tr.reason}}</p>
+<!--                                        <p ng-if="tr.reason!=''">Description: {{tr.reason}}</p>-->
                                     </div>
                                 </div>
                             </div>
@@ -100,8 +105,8 @@
                         <ion-item class="item" ng-repeat="tr in t.admin">
                             <p><b>Amount in Barter:</b> {{tr.payableamount}}</p>
                             <p><b>Amount in INR:</b> {{tr.amount}}</p>
-                            <p><b>Date:</b> {{tr.date}}</p>
-                            <p ng-if='tr.approvalreason!="";'><b>Description:</b> {{tr.approvalreason}}</p>
+                            <p><b>Date:</b> {{tr.date | cmdate:'dd MMM yyyy'}}</p>
+                            <p ng-if="tr.approvalreason"><b>Description:</b> {{tr.approvalreason}}</p>
 
                         </ion-item>
 
