--- a/www/templates/login.html
+++ b/www/templates/login.html
@@ -17,7 +17,10 @@
             </div>
             
             <div class="registration pull-right" ng-click="openreg();">
-                   Become a Member?
+                   Become a Member!
+            </div>
+            <div class="registration pull-left" ng-click="openPassword();">
+                   Forgot Password?
             </div>
             <!--<div class="forgot"><a href="#">Forgot Password?</a></div>-->
         </div>
