forgot password done

--- a/www/templates/forgotpswd.html
+++ b/www/templates/forgotpswd.html
@@ -10,10 +10,10 @@
             <form>
                 <div class="list">
                     <div class="item item-input">
-                        <input type="email" placeholder="Email*" ng-model="email">
+                        <input type="email" placeholder="Email*" ng-model="email.emailid">
                     </div>
                     <div class="padding-horizontal btn-rest">
-                        <button class="button button-block button-balanced" ng-click="forgotpass(email);" type="submit">Submit</button>
+                        <button class="button button-block button-balanced" ng-click="forgotpass();" type="submit">Submit</button>
                     </div>
                 </div>
             </form>
