--- a/www/templates/modaltransaction-mypurchase.html
+++ b/www/templates/modaltransaction-mypurchase.html
@@ -41,7 +41,7 @@
 				<ion-item class="item-left">
 					<h2>Address</h2>
 					<div class="pull-right item-right text-capitalize">
-						{{getp.billingaddress}}
+						{{getp.address}}
 					</div>
 				</ion-item>
 				<ion-item class="item-left">
