--- a/www/templates/modaltransaction-mysale.html
+++ b/www/templates/modaltransaction-mysale.html
@@ -41,7 +41,7 @@
 				<ion-item class="item-left">
 					<h2>Address</h2>
 					<div class="pull-right item-right text-capitalize">
-						{{getsell.billingaddress}}
+						{{getsell.address}}
 					</div>
 				</ion-item>
 				<ion-item class="item-left">
