--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -7,7 +7,7 @@
 -->
     <ion-header-bar class="bar-royal" align-title="center">
         <div class="buttons button-left">
-            <button class="button button-icon ion-navicon no-hide" menu-toggle="left">
+            <button class="button button-icon ion-navicon no-hide" menu-toggle="left" ng-click="getbadgecount();">
             </button>
         </div>
         <h1 class="title">Home</h1>
