--- a/www/templates/buydetails.html
+++ b/www/templates/buydetails.html
@@ -14,7 +14,7 @@
                         <input type="text" ng-model="getsinglepro.price" readonly class="buy-inputdetails">
 <!--						{{getsinglepro.price}}-->
 					</span>
-                        <h2>Price</h2>
+                        <h2>Price in Rs.</h2>
                     </ion-item>
                     <ion-item>
                         <span class="item-note text-capitalize">
