--- a/www/templates/product.html
+++ b/www/templates/product.html
@@ -78,7 +78,7 @@
 <!--                    <a href="#/app/productdetail">-->
                         <img ng-src={{s.image|serverimage}}  class="full-image">
                         <h5 class="bold">{{s.name}}</h5>
-                        <h5>{{s.price}}</h5>
+                        <h5>Rs. {{s.price}}</h5>
                         </span>
 <!--                    </a>-->
                 </div>
