--- a/www/templates/productedit.html
+++ b/www/templates/productedit.html
@@ -24,7 +24,7 @@
                         <input type="text" placeholder="Name" ng-model="prodetails.name" class="text-right" ng-class="allvalidation[0].validation" required>
                     </div>
                     <div class="item  item-input text-capitalize">
-                        <span class="input-label">Price</span>
+                        <span class="input-label">Price in Rs.</span>
                         <input type="text" placeholder="Price" ng-model="prodetails.price" class="text-right" ng-class="allvalidation[1].validation" required>
                     </div>
                     <div class="item  item-input text-capitalize">
