--- a/www/templates/addproducts.html
+++ b/www/templates/addproducts.html
@@ -17,7 +17,7 @@
                         <input type="text" placeholder="Name" ng-model="ap.name" ng-class="allvalidation[0].validation" required>
                     </div>
                     <div class="item  item-input text-capitalize">
-                        <input type="text" placeholder="Price" ng-model="ap.price" ng-class="allvalidation[1].validation" required>
+                        <input type="text" placeholder="Price in Rs." ng-model="ap.price" ng-class="allvalidation[1].validation" required>
                     </div>
                     <div class="item  item-input text-capitalize">
                         <input type="number" min="1" placeholder="Quantity" ng-model="ap.quantity" ng-class="allvalidation[2].validation" required>
