--- a/www/templates/modaltransaction-mysale.html
+++ b/www/templates/modaltransaction-mysale.html
@@ -23,7 +23,7 @@
 				<ion-item class="item-left">
 					<h2>Price</h2>
 					<div class="pull-right item-right text-capitalize">
-						{{getsell.price}}
+						Rs. {{getsell.price}}
 					</div>
 				</ion-item>
 				<ion-item class="item-left">
