--- a/www/templates/modaltransaction-saletransaction.html
+++ b/www/templates/modaltransaction-saletransaction.html
@@ -17,7 +17,7 @@
 				<ion-item class="item-left">
 					<h2>Date</h2>
 					<div class="pull-right item-right text-capitalize">
-						{{getsell.date}}
+						{{getsell.date | cmdate:'dd MMM yyyy'}}
 					</div>
 				</ion-item>
 				<ion-item class="item-left">
