--- a/www/templates/orders.html
+++ b/www/templates/orders.html
@@ -18,7 +18,7 @@
                 <div class="item item-thumbnail-left" ng-click="openpurchase(p);" ng-repeat="p in mypurchase">
                     <img ng-src={{p.productimage|serverimage}}>
                     <h3 class="leftnames">Name: <span>{{p.productname}}</span></h2>
-                    <h3 class="leftnames">Price: <span>{{p.price}}</span></h3>
+                    <h3 class="leftnames">Price: <span>Rs. {{p.price}}</span></h3>
                     <h3 class="leftnames">Order ID: <span>{{p.id}}</span></h3>
                 </div>
                 <!--
@@ -36,7 +36,7 @@
                 <div class="item item-thumbnail-left" ng-click="opensale(o);" ng-repeat="o in ordr">
                    <img ng-src={{o.productimage|serverimage}}>
                     <h3 class="leftnames">Name: <span>{{o.productname}}</span></h3>
-                    <h3 class="leftnames">Price: <span>{{o.price}}</span></h3>
+                    <h3 class="leftnames">Price: <span>Rs.{{o.price}}</span></h3>
                     <h3 class="leftnames">Order ID: <span>{{o.id}}</span></h3>
                 </div>
             </div>
