--- a/www/templates/purchase.html
+++ b/www/templates/purchase.html
@@ -11,10 +11,10 @@
                 <div class="list">
                    
                     <label class="item item-input">
-                        <span class="input-label">Sales Limit of Shop:</span> {{profile.salesbalance}}
+                        <span class="input-label">Sales Limit of Shop:</span> Rs. {{profile.salesbalance}}
                     </label>
                     <label class="item item-input">
-                        <span class="input-label">My Purchase Limit:</span> {{userpurchasebalance}}
+                        <span class="input-label">My Purchase Limit:</span> Rs. {{userpurchasebalance}}
                     </label>
                     <label class="item item-input">
                         <span class="input-label">Amount:</span>
