--- a/www/templates/selling.html
+++ b/www/templates/selling.html
@@ -13,7 +13,7 @@
                         <div class="col-75" ng->
                             <div class="sell-cont">
                                 <h2>{{r.shopname}}</h2>
-                                <p>Amount: {{r.amount}}</p>
+                                <p>Amount: Rs. {{r.amount}}</p>
                                 <p ng-if="r.reason">Reason: {{r.reason}}</p>
 
                                 <textarea style="width:100%;font-size:13px;border: 1px solid #ccc;margin: 10px 0;padding: 4px;" ng-model="reason" rows="3" placeholder="Enter your reason"></textarea>
