--- a/www/templates/addbalance.html
+++ b/www/templates/addbalance.html
@@ -11,7 +11,7 @@
                 <div class="list">
                     <label class="item item-input">
                         <span class="input-label">Amount in Barter:</span>
-                        <input type="text" ng-model="add.amount" ng-change="changeamountinr(add.amount);" class="disable" disabled>
+                        <input type="text" ng-model="add.amount" class="disable" disabled>
                     </label>
                     <label class="item item-input">
                         <span class="input-label">Amount in INR*:</span>
