add balance fixed

--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -59,7 +59,7 @@
             </div>
 
             <div class="padding-horizontal" ng-controller="YourBalCtrl">
-                <button class="button button-block button-balanced" ng-click="openedit();">
+                <button class="button button-block button-balanced" ng-click="openeditss();">
                     Add Balance
                 </button>
             </div>
